--- a/local.env
+++ b/local.env
@@ -1,13 +1,14 @@
 DEBUG=True
 
 # update username/password to match your local configuration
-DATABASE_URL=postgres://postgres:password@localhost:5432/lite-api
+DATABASE_URL=postgres://postgres:password@db:5432/lite-api
 
-# Comment above and uncomment below for running in docker
-#DATABASE_URL=postgres://postgres:password@db:5432/lite-api
+# Comment above and uncomment below when not running in docker
+#DATABASE_URL=postgres://postgres:password@localhost:5432/lite-api
 
 PORT=8100
 ALLOWED_HOSTS=*
+OAUTHLIB_INSECURE_TRANSPORT=True
 
 # SEED USERS
 INTERNAL_USERS=[{"email": "", "role": "Super User"}]
@@ -20,9 +21,11 @@ EXPORTER_USERS=[{"email": "", "organisation": "Archway Communications", "role": 
 # INTERNAL_USERS are also seeded as exporter users so they do not need to be added
 # to the EXPORTER_USERS variable
 # Although, if you wish to specify what organisation or role they have as an exporter,
+# Although, if you wish to specify what organisation or role they have as an exporter,
 # you will need to add them to EXPORTER_USERS and specify that information there
-REDIS_BASE_URL=redis://localhost:6379
+REDIS_BASE_URL=redis://redis:6379
 
+LITE_API_ENABLE_ES=True
 
 # AWS
 AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
@@ -31,29 +34,29 @@ AWS_STORAGE_BUCKET_NAME=AWS_STORAGE_BUCKET_NAME
 AWS_REGION=eu-west-2
 
 # AV
-AV_SERVICE_URL=AV_SERVICE_URL
-AV_SERVICE_USERNAME=AV_SERVICE_USERNAME
-AV_SERVICE_PASSWORD=AV_SERVICE_PASSWORD
+AV_SERVICE_URL=<<FROM_VAULT>>
+AV_SERVICE_USERNAME=<<FROM_VAULT>>
+AV_SERVICE_PASSWORD=<<FROM_VAULT>>
 
 # HMRC Integration
-LITE_HMRC_INTEGRATION_ENABLED=False
-LITE_HMRC_INTEGRATION_URL=LITE_HMRC_INTEGRATION_URL
+LITE_HMRC_INTEGRATION_ENABLED=<<FROM_VAULT>>
+LITE_HMRC_INTEGRATION_URL=<<FROM_VAULT>>
 
 PYTHONUNBUFFERED=1
-BACKGROUND_TASK_ENABLED=False
-UPLOAD_DOCUMENT_ENDPOINT_ENABLED=False
+BACKGROUND_TASK_ENABLED=<<FROM_VAULT>>
+UPLOAD_DOCUMENT_ENDPOINT_ENABLED=<<FROM_VAULT>>
 
-DJANGO_SECRET_KEY=DJANGO_SECRET_KEY
+DJANGO_SECRET_KEY=<<FROM_VAULT>>
 
-HAWK_AUTHENTICATION_ENABLED=False
-HAWK_LITE_DATA_WORKSPACE_KEY=dummy_value
-LITE_EXPORTER_HAWK_KEY=LITE_EXPORTER_HAWK_KEY
-LITE_INTERNAL_HAWK_KEY=LITE_INTERNAL_HAWK_KEY
-LITE_E2E_HAWK_KEY=LITE_E2E_HAWK_KEY
-LITE_PERFORMANCE_HAWK_KEY=LITE_PERFORMANCE_HAWK_KEY
-LITE_HMRC_INTEGRATION_HAWK_KEY=LITE_HMRC_INTEGRATION_HAWK_KEY
-LITE_ACTIVITY_STREAM_HAWK_KEY=LITE_ACTIVITY_STREAM_HAWK_KEY
-LITE_API_HAWK_KEY=LITE_API_HAWK_KEY
+HAWK_AUTHENTICATION_ENABLED=<<FROM_VAULT>>
+HAWK_LITE_DATA_WORKSPACE_KEY=<<FROM_VAULT>>
+LITE_EXPORTER_HAWK_KEY=<<FROM_VAULT>>
+LITE_INTERNAL_HAWK_KEY=<<FROM_VAULT>>
+LITE_E2E_HAWK_KEY=<<FROM_VAULT>>
+LITE_PERFORMANCE_HAWK_KEY=<<FROM_VAULT>>
+LITE_HMRC_INTEGRATION_HAWK_KEY=<<FROM_VAULT>>
+LITE_ACTIVITY_STREAM_HAWK_KEY=<<FROM_VAULT>>
+LITE_API_HAWK_KEY=<<FROM_VAULT>>
 
 PERFORMANCE_TEST_HOST=PERFORMANCE_TEST_HOST
 PERFORMANCE_GOV_USER=PERFORMANCE_GOV_USER
@@ -63,19 +66,21 @@ PERFORMANCE_EXPORTER_ORGANISATION=PERFORMANCE_EXPORTER_ORGANISATION
 
 # Gov notify
 GOV_NOTIFY_ENABLED=False
-GOV_NOTIFY_KEY=GOV_NOTIFY_KEY
+GOV_NOTIFY_KEY=<<FROM_VAULT>>
 INTERNAL_BASE_URL=INTERNAL_BASE_URL
 
 # Document signing
-DOCUMENT_SIGNING_ENABLED=False
-P12_CERTIFICATE=P12_CERTIFICATE  # Base64 encoded P12 file (Certificate & Private key)
-CERTIFICATE_PASSWORD=CERTIFICATE_PASSWORD
-SIGNING_EMAIL=SIGNING_EMAIL
-SIGNING_LOCATION=SIGNING_LOCATION
-SIGNING_REASON=SIGNING_REASON
+DOCUMENT_SIGNING_ENABLED=<<FROM_VAULT>>
+P12_CERTIFICATE=<<FROM_VAULT>>  # Base64 encoded P12 file (Certificate & Private key)
+CERTIFICATE_PASSWORD=<<FROM_VAULT>>
+SIGNING_EMAIL=<<FROM_VAULT>>
+SIGNING_LOCATION=<<FROM_VAULT>>
+SIGNING_REASON=<<FROM_VAULT>>
 
-PERMISSIONS_FINDER_URL='' # required for accessing exporter lite content, can be empty string
+PERMISSIONS_FINDER_URL=<<FROM_VAULT>> # required for accessing exporter lite content, can be empty string
 
-ELASTICSEARCH_HOST=http://localost:9200
+ELASTICSEARCH_HOST=http://host.docker.internal:9200
+# Comment above and uncomment below when not running in docker
+#ELASTICSEARCH_HOST=http://localhost:9200
 
 FEATURE_SIEL_COMPLIANCE_ENABLED=False
