local env file additional comments

--- a/local.env
+++ b/local.env
@@ -21,10 +21,13 @@ EXPORTER_USERS=[{"email": "", "organisation": "Archway Communications", "role": 
 # INTERNAL_USERS are also seeded as exporter users so they do not need to be added
 # to the EXPORTER_USERS variable
 # Although, if you wish to specify what organisation or role they have as an exporter,
-# Although, if you wish to specify what organisation or role they have as an exporter,
 # you will need to add them to EXPORTER_USERS and specify that information there
-REDIS_BASE_URL=redis://redis:6379
 
+REDIS_BASE_URL=redis://redis:6379
+# Comment above and uncomment below when not running in docker
+# REDIS_BASE_URL=redis://localhost:6379
+
+# disable below is elastic not installed locally
 LITE_API_ENABLE_ES=True
 
 # AWS
@@ -81,6 +84,6 @@ PERMISSIONS_FINDER_URL=<<FROM_VAULT>> # required for accessing exporter lite con
 
 ELASTICSEARCH_HOST=http://host.docker.internal:9200
 # Comment above and uncomment below when not running in docker
-#ELASTICSEARCH_HOST=http://localhost:9200
+# ELASTICSEARCH_HOST=http://localhost:9200
 
 FEATURE_SIEL_COMPLIANCE_ENABLED=False
