use Administrator role for initial seed of exporter users
Super User was changed to Administrator in this PR https://github.com/uktrade/lite-api/pull/1019

--- a/local.env
+++ b/local.env
@@ -14,9 +14,9 @@ OAUTHLIB_INSECURE_TRANSPORT=True
 INTERNAL_USERS=[{"email": "", "role": "Super User"}]
 # 'email' is required
 # 'role' defaults to 'Super User' if not specified
-EXPORTER_USERS=[{"email": "", "organisation": "Archway Communications", "role": "Super User"}]
+EXPORTER_USERS=[{"email": "", "organisation": "Archway Communications", "role": "Administrator"}]
 # 'email' is required
-# 'organisation' defaults to 'Archway Communications' and 'role' defaults to  and 'Super User' if not specified
+# 'organisation' defaults to 'Archway Communications' and role to Administrator if not specificied
 
 # INTERNAL_USERS are also seeded as exporter users so they do not need to be added
 # to the EXPORTER_USERS variable
