--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   db:
-    image: "postgres"
+    image: "postgres:12"
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=lite-api
