Fixed the version of cryptography which was incompatible with our version of pyOpenSSL

--- a/Pipfile
+++ b/Pipfile
@@ -53,6 +53,8 @@ dataclasses = "~=0.6"
 # endesive = "~=1.5.9" (not included here as installed in a later jenkins step. Uncomment if working locally)
 pypdf2 = "~=1.27.5"
 pyOpenSSL = "~=22.0.0"
+# The following dependency stops the cryptography package jumping by a major version which breaks pyOpenSSL 22.x
+cryptography = "~=38.0"
 sentry-sdk = "~=0.20.3"
 elastic-apm = "~=6.7.2"
 gunicorn = "~=20.1.0"
