Add GIT_COMMIT_SHA to settings

--- a/local.env
+++ b/local.env
@@ -9,6 +9,7 @@ DATABASE_URL=postgres://postgres:password@db:5432/lite-api
 PORT=8100
 ALLOWED_HOSTS=*
 OAUTHLIB_INSECURE_TRANSPORT=True
+ENV=local
 
 # SEED USERS
 INTERNAL_USERS=[{"email": "", "role": "Super User"}]
