--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,9 @@ db.sqlite3
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
+# Run configurations
+.run/
+
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
