--- a/local.env
+++ b/local.env
@@ -88,3 +88,4 @@ ELASTICSEARCH_HOST=http://host.docker.internal:9200
 # ELASTICSEARCH_HOST=http://localhost:9200
 
 FEATURE_SIEL_COMPLIANCE_ENABLED=False
+FEATURE_COUNTERSIGN_ROUTING_ENABLED=False
