--- a/ci.env
+++ b/ci.env
@@ -51,3 +51,4 @@ SIGNING_REASON=SIGNING_REASON
 PERMISSIONS_FINDER_URL='' # required for accessing exporter lite content, can be empty string
 ELASTICSEARCH_HOST=http://elasticsearch:9200
 FEATURE_SIEL_COMPLIANCE_ENABLED=False
+FEATURE_COUNTERSIGN_ROUTING_ENABLED=False
