Add tests for signing PDFs

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pytest-django = "*"
 pytest-bdd = "*"
 ipdb = "*"
 watchdog = {extras = ["watchmedo"], version = "*"}
+diff-pdf-visually = "~=1.7.0"
 
 [packages]
 factory-boy = "~=2.12.0"
