--- a/ci.env
+++ b/ci.env
@@ -9,6 +9,7 @@ ALLOWED_HOSTS=*
 INTERNAL_USERS='[{"email": "filippo.raimondi@digital.trade.gov.uk", "role": "Super User"}]'
 EXPORTER_USERS='[{"email": "filippo.raimondi@digital.trade.gov.uk", "organisation": "Archway Communications", "role": "Super User"}]'
 # AWS
+AWS_ENDPOINT_URL=AWS_ENDPOINT_URL
 AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
 AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
 AWS_STORAGE_BUCKET_NAME=AWS_STORAGE_BUCKET_NAME
