--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,21 @@ services:
     networks:
       - lite
 
+  s3:
+    image: minio/minio
+    ports:
+      - 9000:9000
+      - 9001:9001
+    entrypoint: sh
+    command: -c 'minio server /buckets --console-address ":9001"'
+    environment:
+      - MINIO_ROOT_USER=minio_username
+      - MINIO_ROOT_PASSWORD=minio_password
+    networks:
+      - lite
+    volumes:
+      - ./volumes/s3/:/buckets
+
 networks:
   lite:
     external: true
