--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,7 +163,7 @@ jobs:
       - run:
           name: Run lite_routing tests
           command: |
-            pipenv run pytest lite_routing/routing_rules_internal/tests/bdd
+            pipenv run pytest --gherkin-terminal-reporter -vv lite_routing/routing_rules_internal/tests/bdd
       - upload_code_coverage
 
   elastic_search_tests:
