Disable capturing warnings during tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = api.conf.settings_test
 addopts =
-  -k "not seeding and not elasticsearch and not performance"
+  -k "not seeding and not elasticsearch and not performance" -p no:warnings
 env =
 	ELASTICSEARCH_SANCTION_INDEX_ALIAS=sanctions-alias-test
 	ELASTICSEARCH_DENIALS_INDEX_ALIAS=denials-alias-test
