--- a/Pipfile
+++ b/Pipfile
@@ -74,6 +74,7 @@ redis = "~=4.4.4"
 psycopg2-binary = "~=2.9.3"
 django-test-migrations = "~=1.2.0"
 django-silk = "==5.0.3"
+Jinja2 = "~=3.1.2"
 
 [requires]
 python_version = "3.7"
