--- a/Pipfile
+++ b/Pipfile
@@ -5,20 +5,20 @@ verify_ssl = true
 
 [dev-packages]
 black = "~=22.3.0"
-bandit = "==1.6.2"
+bandit = "~=1.6.2"
 coverage = "~=5.0"
 parameterized = "~=0.7"
-prospector = "==1.1.6.2" #  Our project only works with version 1.1.6.2
-django-extensions = "*"
-django-coverage-plugin = "*"
+prospector = "~=1.2.0"
+django-extensions = "~=3.2.3"
+django-coverage-plugin = "~=3.1.0"
 pytest-cov = "~=2.10.0"
 requests-mock = "~=1.8"
 freezegun = "~=1.0.0"
-pytest = "*"
-pytest-django = "*"
-pytest-bdd = "*"
-ipdb = "*"
-watchdog = {extras = ["watchmedo"], version = "*"}
+pytest = "~=7.4.2"
+pytest-django = "~=4.5.2"
+pytest-bdd = "~=6.1.1"
+ipdb = "~=0.13.13"
+watchdog = {extras = ["watchmedo"], version = "~=3.0.0"}
 diff-pdf-visually = "~=1.7.0"
 
 [packages]
@@ -39,40 +39,39 @@ django-model-utils = "~=4.3.1"
 django-sortedm2m = "~=3.1.1"
 django-staff-sso-client = "~=3.1.1"
 djangorestframework = "~=3.13.1"
-elasticsearch = "<7.14.0"
+elasticsearch = "~=7.14.0"
 markdown = "~=3.4.1"
 mohawk = "~=1.1.0"
-openpyxl = "==3.0.6"
+openpyxl = "~=3.0.6"
 packaging = "~=20.0"
 requests-toolbelt = "~=0.10.1"
 tblib = "~=1.7.0"
-weasyprint = "==52.5"
+weasyprint = "~=52.5"
 defusedxml = "~=0.6.0"
 xmlschema = "~=1.2.0"
 notifications-python-client = "~=5.7.1"
 dataclasses = "~=0.6"
-# endesive = "~=1.5.9" (not included here as installed in a later jenkins step. Uncomment if working locally)
+# endesive = "~=1.5.9" # not included here as installed in a later Jenkins step, uncomment if working locally
 pypdf2 = "~=1.27.5"
 cryptography = "~=41.0.3"
 sentry-sdk = "~=1.17.0"
 elastic-apm = "~=6.7.2"
 gunicorn = "~=20.1.0"
-gevent = "~=20.12.1"
+gevent = "~=21.12.0"
 xmltodict = "~=0.12.0"
 Pillow = ">8.1.0,<9.4"
-django-phonenumber-field = "==6.4.0"
+django-phonenumber-field = "~=6.4.0"
 phonenumbers = "~=8.13.1"
-django-log-formatter-ecs = "==0.0.5"
+django-log-formatter-ecs = "~=0.0.5"
 whitenoise = "~=5.3.0"
 django-audit-log-middleware = "~=0.0.4"
 django-extensions = "~=3.2.1"
 ipython = "~=7.34.0"
-importlib-metadata = "==4.8.1"  # Not needed for Python3.8+
 celery = "~=5.2.7"
 redis = "~=4.4.4"
 psycopg2-binary = "~=2.9.3"
 django-test-migrations = "~=1.2.0"
-django-silk = "==5.0.3"
+django-silk = "~=5.0.3"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
