--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ verify_ssl = true
 
 [dev-packages]
 black = "~=22.3.0"
-bandit = "~=1.6.2"
+bandit = "==1.7.5"
 coverage = "~=5.0"
 parameterized = "~=0.7"
 prospector = "~=1.2.0"
