Fix python buildpack issue

--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,8 @@ black = "~=22.3.0"
 bandit = "==1.6.2"
 coverage = "~=5.0"
 parameterized = "~=0.7"
-prospector = "==1.1.6.2" #  Our project only works with version 1.1.6.2
-django-extensions = "*"
-django-coverage-plugin = "*"
+prospector = "~=1.2.0"
+django-coverage-plugin = "~=3.1.0"
 pytest-cov = "~=2.10.0"
 requests-mock = "~=1.8"
 freezegun = "~=1.0.0"
@@ -65,14 +64,16 @@ phonenumbers = "~=8.13.1"
 django-log-formatter-ecs = "==0.0.5"
 whitenoise = "~=5.3.0"
 django-audit-log-middleware = "~=0.0.4"
-django-extensions = "~=3.2.1"
+django-extensions = "~=3.2.3"
 ipython = "~=7.34.0"
-importlib-metadata = "==4.8.1"  # Not needed for Python3.8+
-celery = "~=5.2.7"
+celery = "~=5.3.0"
 redis = "~=4.4.4"
 psycopg2-binary = "~=2.9.3"
 django-test-migrations = "~=1.2.0"
-django-silk = "==5.0.3"
+django-silk = "~=5.0.3"
+cffi = "~=1.15.1"
+django-compat = "~=1.0.15"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
+python_full_version = "3.8.17"
