--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,6 @@ bandit = "~=1.6.2"
 coverage = "~=5.0"
 parameterized = "~=0.7"
 prospector = "~=1.2.0"
-django-extensions = "~=3.2.3"
 django-coverage-plugin = "~=3.1.0"
 pytest-cov = "~=2.10.0"
 requests-mock = "~=1.8"
@@ -65,13 +64,16 @@ phonenumbers = "~=8.13.1"
 django-log-formatter-ecs = "~=0.0.5"
 whitenoise = "~=5.3.0"
 django-audit-log-middleware = "~=0.0.4"
-django-extensions = "~=3.2.1"
+django-extensions = "~=3.2.3"
 ipython = "~=7.34.0"
-celery = "~=5.2.7"
+celery = "~=5.3.0"
 redis = "~=4.4.4"
 psycopg2-binary = "~=2.9.3"
 django-test-migrations = "~=1.2.0"
 django-silk = "~=5.0.3"
+cffi = "~=1.15.1"
+django-compat = "~=1.0.15"
 
 [requires]
 python_version = "3.8"
+python_full_version = "3.8.17"
