--- a/Pipfile
+++ b/Pipfile
@@ -55,8 +55,8 @@ pypdf2 = "~=1.27.5"
 cryptography = "~=41.0.3"
 sentry-sdk = "~=1.17.0"
 elastic-apm = "~=6.7.2"
-gunicorn = "~=20.1.0"
-gevent = "~=20.12.1"
+gunicorn = "*"
+gevent = "~=23.9.1"
 xmltodict = "~=0.12.0"
 Pillow = ">8.1.0,<9.4"
 django-phonenumber-field = "==6.4.0"
@@ -71,8 +71,6 @@ redis = "~=4.4.4"
 psycopg2-binary = "~=2.9.3"
 django-test-migrations = "~=1.2.0"
 django-silk = "~=5.0.3"
-cffi = "~=1.15.1"
-django-compat = "~=1.0.15"
 
 [requires]
 python_version = "3.8"
