--- a/Pipfile
+++ b/Pipfile
@@ -55,7 +55,7 @@ pypdf2 = "~=1.27.5"
 cryptography = "~=41.0.3"
 sentry-sdk = "~=1.17.0"
 elastic-apm = "~=6.7.2"
-gunicorn = "*"
+gunicorn = "~=21.2.0"
 gevent = "~=23.9.1"
 xmltodict = "~=0.12.0"
 Pillow = ">8.1.0,<9.4"
