Make other test suites parallelized

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ jobs:
     environment:
       <<: *common_env_vars
       LITE_API_ENABLE_ES: True
-    parallelism: 5
+    parallelism: 10
     steps:
       - setup
       - run:
@@ -144,6 +144,31 @@ jobs:
       - store_test_results:
           path: test_results
 
+  migration_tests:
+    docker:
+      - <<: *image_python
+      - <<: *image_postgres
+      - <<: *image_elasticsearch
+      - <<: *image_redis
+    working_directory: ~/lite-api
+    environment:
+      <<: *common_env_vars
+      LITE_API_ENABLE_ES: True
+    parallelism: 5
+    steps:
+      - setup
+      - run:
+          name: Create report directories
+          command: |
+            mkdir test_results
+      - run:
+          name: Run migration tests
+          command: |
+            pipenv run pytest --circleci-parallelize --cov=. --cov-report xml --cov-config=.coveragerc -k migration --junitxml=test_results/output.xml
+      - upload_code_coverage
+      - store_test_results:
+          path: test_results
+
   lite_routing_tests:
     docker:
       - <<: *image_python
@@ -154,6 +179,7 @@ jobs:
     environment:
       <<: *common_env_vars
       LITE_API_ENABLE_ES: True
+    parallelism: 5
     steps:
       - setup
       - run:
@@ -163,7 +189,7 @@ jobs:
       - run:
           name: Run lite_routing tests
           command: |
-            pipenv run pytest --cov=. --cov-report xml --cov-config=.coveragerc --ignore lite_routing/routing_rules_internal/tests/bdd lite_routing --junitxml=test_results/output.xml
+            pipenv run pytest --circleci-parallelize --cov=. --cov-report xml --cov-config=.coveragerc --ignore lite_routing/routing_rules_internal/tests/bdd lite_routing --junitxml=test_results/output.xml
       - upload_code_coverage
       - store_test_results:
           path: test_results
@@ -178,6 +204,7 @@ jobs:
     environment:
       <<: *common_env_vars
       LITE_API_ENABLE_ES: True
+    parallelism: 5
     steps:
       - setup
       - run:
@@ -191,7 +218,7 @@ jobs:
             mkdir cucumber_html
       - run:
           name: Run lite_routing tests
-          command: pipenv run pytest --gherkin-terminal-reporter -vv lite_routing/routing_rules_internal/tests/bdd --junitxml=test_results/output.xml --cucumberjson=cucumber_results/cuc.json
+          command: pipenv run pytest --circleci-parallelize --gherkin-terminal-reporter -vv lite_routing/routing_rules_internal/tests/bdd --junitxml=test_results/output.xml --cucumberjson=cucumber_results/cuc.json
       - run:
           name: Generate html cucumber report
           command: node generate_cucumber_report.js
