--- a/Pipfile
+++ b/Pipfile
@@ -60,6 +60,7 @@ gevent = "~=23.9.1"
 xmltodict = "~=0.12.0"
 Pillow = ">8.1.0,<9.4"
 django-phonenumber-field = "==6.4.0"
+django-enumfields= ">=2.0.0,<2.1"
 phonenumbers = "~=8.13.1"
 django-log-formatter-ecs = "==0.0.5"
 whitenoise = "~=5.3.0"
