--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -1,4 +1,4 @@
-FROM python:3.8.18-slim-bullseye
+FROM ubuntu:22.04
 
 ARG DOCKERIZE_VERSION=v0.6.1
 
@@ -6,10 +6,10 @@ WORKDIR /app
 
 # Install python dependencies
 RUN apt-get update --fix-missing
-RUN apt-get install -y libpq-dev gcc \
+RUN apt-get install -y libpq-dev gcc curl wget \
   build-essential python3-dev python3-pip python3-setuptools python3-wheel \
   python3-cffi libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 \
-  libffi-dev shared-mime-info swig wget
+  libffi-dev shared-mime-info swig git imagemagick poppler-utils openssl
 
 # Install dockerize
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
@@ -17,15 +17,18 @@ RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSI
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
 # Install app dependencies
+RUN curl https://pyenv.run | bash
+ENV HOME /root
+ENV PYENV_ROOT $HOME/.pyenv
+ENV PATH $PYENV_ROOT/bin:$PATH
+RUN pyenv install -v 3.8.18
+RUN pyenv global 3.8.18
+
 RUN pip3 install pipenv
 ADD Pipfile* /app/
-RUN pipenv install --dev --system --deploy
+RUN pipenv install --dev --deploy
 RUN pip3 install endesive==1.5.9
 
 ADD . /app
-
-# Install git
-RUN apt-get update --fix-missing
-RUN apt-get install -y git
 
 CMD ./start-e2e.sh
