--- a/Pipfile
+++ b/Pipfile
@@ -38,7 +38,8 @@ django-health-check = "~=3.16.5"
 django-model-utils = "~=4.3.1"
 django-sortedm2m = "~=3.1.1"
 django-staff-sso-client = "~=3.1.1"
-djangorestframework = "~=3.13.1"
+#djangorestframework = "~=3.13.1"
+djangorestframework = ">=3.13.1,!=3.14.0"
 elasticsearch = "<7.14.0"
 markdown = "~=3.4.1"
 mohawk = "~=1.1.0"
