--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,6 @@ factory-boy = "~=2.12.0"
 unittest-xml-reporting = "~=2.5.2"
 faker = "~=4.18.0"
 boto3 = "~=1.26.17"
-Django = "~=3.2.20"
 django-activity-stream = "~=0.10.0"
 django-allow-cidr = "~=0.5.0"
 django-background-tasks = "~=1.2.5"
@@ -72,6 +71,7 @@ redis = "~=4.4.4"
 psycopg2-binary = "~=2.9.3"
 django-test-migrations = "~=1.2.0"
 django-silk = "~=5.0.3"
+django = "~=3.2.23"
 
 [requires]
 python_version = "3.8"
