--- a/Pipfile
+++ b/Pipfile
@@ -29,7 +29,7 @@ boto3 = "~=1.26.17"
 django-activity-stream = "~=0.10.0"
 django-allow-cidr = "~=0.5.0"
 django-background-tasks = "~=1.2.5"
-django-elasticsearch-dsl = "~=7.2.2"
+django-elasticsearch-dsl = "==7.4"
 django-elasticsearch-dsl-drf = "~=0.22.5"
 django-environ = "~=0.9.0"
 django-jsonfield = "~=1.4.1"
@@ -72,6 +72,7 @@ psycopg2-binary = "~=2.9.3"
 django-test-migrations = "~=1.2.0"
 django-silk = "~=5.0.3"
 django = "~=3.2.23"
+redis-cli = "*"
 
 [requires]
 python_version = "3.8"
