--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,6 +126,7 @@ jobs:
       - <<: *image_python
       - <<: *image_postgres
       - <<: *image_elasticsearch
+      - <<: *image_redis
     working_directory: ~/lite-api
     environment:
       <<: *common_env_vars
@@ -233,6 +234,7 @@ jobs:
       - <<: *image_python
       - <<: *image_postgres
       - <<: *image_elasticsearch
+      - <<: *image_redis
     working_directory: ~/lite-api
     environment:
       <<: *common_env_vars
