enable hawk by default

--- a/local.env
+++ b/local.env
@@ -52,10 +52,9 @@ UPLOAD_DOCUMENT_ENDPOINT_ENABLED=<<FROM_VAULT>>
 
 DJANGO_SECRET_KEY=<<FROM_VAULT>>
 
-HAWK_AUTHENTICATION_ENABLED=<<FROM_VAULT>>
 HAWK_LITE_DATA_WORKSPACE_KEY=<<FROM_VAULT>>
-LITE_EXPORTER_HAWK_KEY=<<FROM_VAULT>>
-LITE_INTERNAL_HAWK_KEY=<<FROM_VAULT>>
+LITE_EXPORTER_HAWK_KEY=LITE_EXPORTER_HAWK_KEY
+LITE_INTERNAL_HAWK_KEY=LITE_INTERNAL_HAWK_KEY
 LITE_E2E_HAWK_KEY=<<FROM_VAULT>>
 LITE_PERFORMANCE_HAWK_KEY=<<FROM_VAULT>>
 LITE_HMRC_INTEGRATION_HAWK_KEY=<<FROM_VAULT>>
