--- a/Pipfile
+++ b/Pipfile
@@ -28,16 +28,15 @@ faker = "~=4.18.0"
 boto3 = "~=1.26.17"
 django-activity-stream = "~=0.10.0"
 django-allow-cidr = "~=0.5.0"
-django-background-tasks = "~=1.2.5"
+django4-background-tasks = "~=1.2.9"
 django-elasticsearch-dsl = "~=7.2.2"
 django-elasticsearch-dsl-drf = "~=0.22.5"
 django-environ = "~=0.9.0"
-django-jsonfield = "~=1.4.1"
 django-health-check = "~=3.16.5"
 django-model-utils = "~=4.3.1"
 django-sortedm2m = "~=3.1.1"
 django-staff-sso-client = "~=4.2.1"
-djangorestframework = "~=3.13.1"
+djangorestframework = "~=3.14.0"
 elasticsearch = "<7.14.0"
 markdown = "~=3.4.1"
 mohawk = "~=1.1.0"
