--- a/ci.env
+++ b/ci.env
@@ -51,3 +51,6 @@ SIGNING_REASON=SIGNING_REASON
 PERMISSIONS_FINDER_URL='' # required for accessing exporter lite content, can be empty string
 ELASTICSEARCH_HOST=http://elasticsearch:9200
 FEATURE_SIEL_COMPLIANCE_ENABLED=False
+CELERY_ALWAYS_EAGER=True
+CELERY_TASK_STORE_EAGER_RESULT=True
+CELERY_TASK_ALWAYS_EAGER=True
