--- a/Pipfile
+++ b/Pipfile
@@ -28,7 +28,6 @@ faker = "~=4.18.0"
 boto3 = "~=1.26.17"
 django-activity-stream = "~=0.10.0"
 django-allow-cidr = "~=0.5.0"
-django-background-tasks = "~=1.2.5"
 django-elasticsearch-dsl = "~=7.2.2"
 django-elasticsearch-dsl-drf = "~=0.22.5"
 django-environ = "~=0.9.0"
@@ -73,6 +72,7 @@ django-test-migrations = "~=1.2.0"
 django-silk = "~=5.0.3"
 django-queryable-properties = "~=1.9.1"
 django = "~=3.2.23"
+django-compat = "~=1.0.15"
 
 [requires]
 python_version = "3.8"
